Funcion girar tarjeta con botones en JS

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,10 +118,11 @@ background-color: #0056b3;
 
 
 
-/* Voltear la tarjeta cuando se hace clic en Detalles */
-.tarjeta:hover .frontal {
-    transform: rotateY(180deg); /* Voltea la cara frontal */
+/* Voltear la tarjeta con la clase .girar */
+.tarjeta.girar .frontal {
+        transform: rotateY(180deg); /* Voltea la cara frontal */
 }
-.tarjeta:hover .posterior {
-    transform: rotateY(0deg); /* Muestra la cara posterior */
+      
+.tarjeta.girar .posterior {
+        transform: rotateY(0deg); /* Muestra la cara posterior */
 }
